# lilai

./: .gitignore  README.md  TODO.md  pyproject.toml
exploration/: background.ipynb  structured_output.py  structured_outputs.ipynb
exploration/dl/: TODO.md  cal_flops.ipynb  check_torch.ipynb  profile_torch.ipynb  resnet.py  test_resnet.py
exploration/dl/build_resnet/: resnet.py
exploration/dl/torch_internals/: cal_flops.ipynb  check_torch.ipynb  flops_counter.py  meta_device.py  meta_device_2.py  module_magic.py
